--- a/style.css
+++ b/style.css
@@ -11,3 +11,19 @@
 body {
     font-family: "DM Sans", sans-serif;
 }
+
+.favorite-heartbeat {
+    animation: heartbeat 0.6s ease-in-out;
+}
+
+@keyframes heartbeat {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.3);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
